/*
Copyright 2023 Man Group Operations Limited

Use of this software is governed by the Business Source License 1.1 included in the file licenses/BSL.txt.

As of the Change Date specified in that file, in accordance with the Business Source License, use of this software will be governed by the Apache License, version 2.0.
*/
syntax = "proto3";

import "google/protobuf/any.proto";
import "arcticc/pb2/descriptors.proto";

package arcticc.pb2.generation_pb2;

message GenerationMetadata {
    uint64 group_seq_num = 1;
}

message TickStreamsGeneration {
    /* Defines the entire content of generation of tick streams */
    uint64 id = 1; // hash (type + all immutable fields)
    uint64 version_number = 2; // strictly increasing (id1<id2 => generation(id1) created before generation(id2))
    uint64 creation_us_utc = 3;
    uint64 virt_start_us_utc = 4;
    string timezone = 5;
    uint64 previous_generation_id = 6; // Link through time the generations
    uint32 encoding_version = 7;

    google.protobuf.Any meta_data = 31; // Support for generic metadata. They become part of the hash.

    map<uint64, arcticc.pb2.descriptors_pb2.StreamDescriptor> descriptor_by_hash = 32; // avoid type descriptor repetition (likely very prone to duplication)
    map<uint64, uint64> descriptor_hash_by_stream_id = 33; // map channel to its descriptor with an indirection using hash for deduplication

    // ---  mutable fields while generation being written to ----
    uint64 virt_end_us_utc = 64; // mutable in live
}
